// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons: SocialIcon: [ prop: button ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      96,
      false,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: component ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: disabled ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={true}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: fontFamily ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      96,
      false,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
    <TextElement
      style={
        Array [
          99,
          undefined,
          Object {
            "fontFamily": "Courier New",
          },
          undefined,
          undefined,
        ]
      }
    >
      medium
    </TextElement>
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: fontStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      96,
      false,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
    <TextElement
      style={
        Array [
          99,
          undefined,
          undefined,
          undefined,
          Object {
            "padding": 50,
          },
        ]
      }
    >
      medium
    </TextElement>
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: fontWeight ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      96,
      false,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
    <TextElement
      style={
        Array [
          99,
          undefined,
          undefined,
          Object {
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      medium
    </TextElement>
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: iconColor ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="#071"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: iconSize ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={40}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: iconStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      96,
      false,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          Object {
            "transform": Array [
              Object {
                "rotateZ": "-45deg",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: light ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      Object {
        "backgroundColor": "white",
      },
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="#02b875"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: loading ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      96,
      false,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
    <TextElement
      style={
        Array [
          99,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      medium
    </TextElement>
    <ActivityIndicator
      animating={true}
      color="white"
      hidesWhenStopped={true}
      size="large"
      style={
        Array [
          101,
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: noProps ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": undefined,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: onLongPress ] enzyme-shallow: snapshot 1`] = `
<TouchableHighlight
  activeOpacity={0.85}
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
  underlayColor="#02b875"
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</TouchableHighlight>
`;

exports[`Icons: SocialIcon: [ prop: onPress ] enzyme-shallow: snapshot 1`] = `
<TouchableHighlight
  activeOpacity={0.85}
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
  underlayColor="#02b875"
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</TouchableHighlight>
`;

exports[`Icons: SocialIcon: [ prop: raised ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      false,
      95,
      false,
      false,
      Object {
        "borderRadius": 48,
        "height": 52,
        "width": 52,
      },
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: style ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      96,
      false,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      Object {
        "transform": Array [
          Object {
            "rotateZ": "-45deg",
          },
        ],
        "width": 120,
      },
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: title ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      96,
      false,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
    <TextElement
      style={
        Array [
          99,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      medium
    </TextElement>
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: type ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Icons: SocialIcon: [ prop: underlayColor ] enzyme-shallow: snapshot 1`] = `
<TouchableHighlight
  activeOpacity={0.85}
  disabled={false}
  onLongPress={[Function]}
  onPress={[Function]}
  style={
    Array [
      97,
      95,
      false,
      100,
      false,
      Object {
        "backgroundColor": "#02b875",
      },
      undefined,
      undefined,
    ]
  }
  underlayColor="yellow"
>
  <View
    style={98}
  >
    <[object Object]
      color="white"
      name="medium"
      size={24}
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</TouchableHighlight>
`;
